tests/ui/type-alias-impl-trait/generic_underconstrained2.stderr
error[E0277]: `U` doesn't implement `Debug`
  --> $DIR/generic_underconstrained2.rs:8:33
   |
LL | fn underconstrained<U>(_: U) -> Underconstrained<U> {
   |                                 ^^^^^^^^^^^^^^^^^^^ `U` cannot be formatted using `{:?}` because it doesn't implement `Debug`
   |
note: required by a bound on the type alias `Underconstrained`
  --> $DIR/generic_underconstrained2.rs:5:26
   |
LL | type Underconstrained<T: std::fmt::Debug> = impl Send;
   |                          ^^^^^^^^^^^^^^^ required by this bound
help: consider restricting type parameter `U`
   |
LL | fn underconstrained<U: std::fmt::Debug>(_: U) -> Underconstrained<U> {
   |                      +++++++++++++++++

error[E0277]: `V` doesn't implement `Debug`
  --> $DIR/generic_underconstrained2.rs:17:43
   |
LL | fn underconstrained2<U, V>(_: U, _: V) -> Underconstrained2<V> {
   |                                           ^^^^^^^^^^^^^^^^^^^^ `V` cannot be formatted using `{:?}` because it doesn't implement `Debug`
   |
note: required by a bound on the type alias `Underconstrained2`
  --> $DIR/generic_underconstrained2.rs:14:27
   |
LL | type Underconstrained2<T: std::fmt::Debug> = impl Send;
   |                           ^^^^^^^^^^^^^^^ required by this bound
help: consider restricting type parameter `V`
   |
LL | fn underconstrained2<U, V: std::fmt::Debug>(_: U, _: V) -> Underconstrained2<V> {
   |                          +++++++++++++++++

error[E0277]: `U` doesn't implement `Debug`
  --> $DIR/generic_underconstrained2.rs:8:53
   |
LL |   fn underconstrained<U>(_: U) -> Underconstrained<U> {
   |  _____________________________________________________^
LL | |
LL | |
LL | |     5u32
LL | | }
   | |_^ `U` cannot be formatted using `{:?}` because it doesn't implement `Debug`
   |
note: required by a bound on the type alias `Underconstrained`
  --> $DIR/generic_underconstrained2.rs:5:26
   |
LL | type Underconstrained<T: std::fmt::Debug> = impl Send;
   |                          ^^^^^^^^^^^^^^^ required by this bound
help: consider restricting type parameter `U`
   |
LL | fn underconstrained<U: std::fmt::Debug>(_: U) -> Underconstrained<U> {
   |                      +++++++++++++++++

error[E0277]: `V` doesn't implement `Debug`
  --> $DIR/generic_underconstrained2.rs:17:64
   |
LL |   fn underconstrained2<U, V>(_: U, _: V) -> Underconstrained2<V> {
   |  ________________________________________________________________^
LL | |
LL | |
LL | |     5u32
LL | | }
   | |_^ `V` cannot be formatted using `{:?}` because it doesn't implement `Debug`
   |
note: required by a bound on the type alias `Underconstrained2`
  --> $DIR/generic_underconstrained2.rs:14:27
   |
LL | type Underconstrained2<T: std::fmt::Debug> = impl Send;
   |                           ^^^^^^^^^^^^^^^ required by this bound
help: consider restricting type parameter `V`
   |
LL | fn underconstrained2<U, V: std::fmt::Debug>(_: U, _: V) -> Underconstrained2<V> {
   |                          +++++++++++++++++

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0277`.
